Terminar paginas estaticas

--- a/app/views/paginas_estaticas/inicio.html.erb
+++ b/app/views/paginas_estaticas/inicio.html.erb
@@ -1,2 +1,5 @@
-<h1>PaginasEstaticas#inicio</h1>
-<p>Find me in app/views/paginas_estaticas/inicio.html.erb</p>
+<% provide(:title, 'SisMUG') %>
+<h1>SisMUG</h1>
+<p>
+	Esta es la pagina de inicio para SisMUG
+</p>
