--- a/app/views/paginas_estaticas/acerca.html.erb
+++ b/app/views/paginas_estaticas/acerca.html.erb
@@ -1,2 +1,5 @@
-<h1>PaginasEstaticas#acerca</h1>
-<p>Find me in app/views/paginas_estaticas/acerca.html.erb</p>
+<% provide(:title, 'Acerca de') %>
+<h1>Acerca de</h1>
+<p>
+	Esta es la pagina de informacion de SisMUG
+</p>
