--- a/app/views/paginas_estaticas/ayuda.html.erb
+++ b/app/views/paginas_estaticas/ayuda.html.erb
@@ -1,2 +1,5 @@
-<h1>PaginasEstaticas#ayuda</h1>
-<p>Find me in app/views/paginas_estaticas/ayuda.html.erb</p>
+<% provide(:title, 'Ayuda') %>
+<h1>Ayuda</h1>
+<p>
+	Esta es la pagina de ayuda para SisMUG
+</p>
