Terminar layout y rutas

--- a/app/views/paginas_estaticas/inicio.html.erb
+++ b/app/views/paginas_estaticas/inicio.html.erb
@@ -1,5 +1,11 @@
-<% provide(:title, 'SisMUG') %>
-<h1>SisMUG</h1>
-<p>
-	Esta es la pagina de inicio para SisMUG
-</p>
+<div class="center hero-unit">
+  <h1>Bienvenido a SisMUG</h1>
+
+  <h2>
+    Esta es la página inicial de SisMUG
+  </h2>
+
+  <%= link_to "Eliminar este Boton!", '#', class: "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("sismug.png", alt: "SisMUG"), '#' %>
