--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
         <ul class="nav pull-right">
           <li><%= link_to "Ayuda",  ayuda_path %></li>
           <% if signed_in? %>
-            <li><%= link_to "Personas", '#' %></li>
+            <li><%= link_to "Personas", personas_path %></li>
             <li id="fat-menu" class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 Cuenta <b class="caret"></b>
