Quitar el login cuando ya se esta logueado

--- a/app/views/paginas_estaticas/inicio.html.erb
+++ b/app/views/paginas_estaticas/inicio.html.erb
@@ -1,11 +1,6 @@
 <div class="center hero-unit">
   <h1>Bienvenido a SisMUG</h1>
-
-  <h2>
-    Esta es la página inicial de SisMUG
-  </h2>
-
-  <%= link_to "Eliminar este Boton!", '#', class: "btn btn-large btn-primary" %>
+    <h2>
+      El Sistema Municipal Unico de Gestion
+    </h2>
 </div>
-
-<%= link_to image_tag("sismug.png", alt: "SisMUG"), '#' %>
