--- a/app/views/personas/new.html.erb
+++ b/app/views/personas/new.html.erb
@@ -4,7 +4,7 @@
 <div class="row">
   <div class="span6 offset3">
     <%= form_for(@persona) do |f| %>
-    	<%= render 'shared/error_messages' %>
+    	<%= render 'shared/error_messages', object: f.object %>
 
       <%= f.label :nombre1, "Primer Nombre" %>
       <%= f.text_field :nombre1 %>
